# TDD_project

./: CMake_Tutorial.odt  README.md
code/c2/1/: CMakeLists.txt  Playground.h  Soundex.h  SoundexTest.cpp  main.cpp
code/c2/1.1/: SoundexTest.cpp
